--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 altair
 pandas
 streamlit
-matplotlib
 plotly
-streamlit-echarts
 mysql-connector-python==8.0.27
-MultiApp
+streamlit_cookies_manager
