--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,4 @@ pandas
 streamlit
 plotly
 mysql-connector-python==8.0.27
-#matplotlib
-#streamlit_cookies_manager
+extra_streamlit_components~=0.1.3
