--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,6 +1,6 @@
 [mysql]
-db_host = "212.227.72.95"
-db_port = 3306
+host = "212.227.72.95"
+port = 3306
 database = "coffee_list"
-db_user = "PBTK"
-db_password = "akstr!admin2"
+user = "PBTK"
+password = "akstr!admin2"
